<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RemoteHomeMonitor</string>
    <string name="action_settings">Settings</string>

    <!-- 通用 start -->
    <string name="str_next">"Next"</string>
    <string name="str_previous">"Privous"</string>
    <string name="str_cancle">"Cancle"</string>
    <!-- 通用 End -->


    <!-- 设置页 welcome Start -->
    <string name="str_welcome_setup_wizard_title">"Setup Wizard"</string>
    <string name="str_welcome_setup_wizard_context">"This wizard can set for this application basic parameters, 
        please click "next" to continue."</string>
    <!-- 设置页 welcome End -->


    <!-- 设置管理页 Start -->
    <string name="str_admin_setup_title">"Setup Adminstrator"</string>
    <string name="str_admin_setup_username">"Username:"</string>
    <string name="str_admin_setup_passwd">"Passwd:"</string>
    <string name="str_admin_setup_passwd_verify">"Passwd verify:"</string>
    <string name="str_please_input_username">"Please input Administration name！"</string>
    <string name="str_please_input_passwd">"Please input Administration passwd！"</string>
    <string name="str_please_input_passwd_verify">"Please input Administration passwd again！"</string>
    <string name="str_input_passwd_error_warning">"Warning:The two passwords you typed do not match. Try again！！！"</string>
    <!-- 设置管理页 End -->


    <!-- 设置终端 Start -->
    <string name="str_telnet_setup_title">"Setup Remote Connect Telnet"</string>
    <string name="str_telnet_setup_telnet_name">"Telnet Name:"</string>
    <string name="str_telnet_setup_telnet_connection_number">"Telnet Number:"</string>
    <string name="str_please_input_telnet_name">"Please Input Telnet Name！"</string>
    <string name="str_please_input_telnet_connection_number">"Please Input Telnet Connection Number！"</string>
    <!-- 设置终端 End -->


    <!-- 设置设备 Start -->
    <string name="str_device_setup_title">"Setup Sensor Devices"</string>
    <string name="str_device_setup_name">"Device Name:"</string>
    <string name="str_device_setup_number">"Devices ID:"</string>
     <string name="str_device_setup_number_verify">"Devices ID Verify:"</string>
    <string name="str_device_add">"Add"</string>
    <string name="str_device_del">"Delete"</string>
    <string name="str_setup_finish">"Finish"</string>
    <string name="str_please_input_sensor_device_name">"Please Input Device Name！"</string>
    <string name="str_please_input_sensor_device_number_id">"Please Input Sendor Device serial number ID！"</string>
    <string name="str_please_input_sensor_device_number_id_verify">"Please Input Sendor Device serial number ID again！"</string>
    <string name="str_input_sensor_device_number_id_verify_error">"Input Sendor Device serial number ID mismatch！！"</string>
    <!-- 设置设备 End -->


    <!-- 设置用户 非管理员 Start -->
    <string name="str_user_setup_title">"Setup User Info"</string>
    <string name="str_user_setup_name">"Username:"</string>
    <string name="str_user_setup_passwd">"Passwd:"</string>
    <string name="str_user_setup_passwd_verify">"Passwd verify:"</string>
    <string name="str_user_setup_remind_info">"Remind Info：Setup User Infomation，Administrator Info will save in remote telnet ，Common user save in the local disk！"</string>
    <!-- 设置用户 非管理员 End -->


    <!-- 下载设备信息 Start -->
    <string name="str_device_download_setup_title">"DownLoad Sensor Device Info From Remote"</string>
    <string name="str_admin_register_setup_name">"Admin Name:"</string>
    <string name="str_admin_register_setup_telnumber">"Admin Phone:"</string>
    <string name="str_please_input_admin_name">"Please input Admin Name！"</string>
    <string name="str_please_input_admin_phone_number">"Please input admin phone number！"</string>
    <string name="str_devices_download">"Download"</string>
    <!-- 下载设备信息 End -->


    <!-- 登录页面 Start -->
    <string name="str_remember_passwd">"Remember Passwd"</string>
    <string name="str_login">"Login"</string>
    <string name="str_user_type">"UserType:"</string>
    <string name="str_username_or_passwd_error">"Username or Passwd input error,Please input again!"</string>
    <!-- 登录页面 End -->


    <!-- 主页面 Start -->
    <string name="str_main_exit">"Exit"</string>
    <string name="str_main_warning_id">"Warning ID:"</string>
    <string name="str_main_safety_status">"Safety Status:"</string>
    <string name="str_main_safety">"Safety"</string>
    <string name="str_main_invade">"invade"</string>
    <string name="str_main_call">"Call"</string>
    <string name="str_main_setting">"Settings"</string>
    <string name="str_main_history">"Histories"</string>
    <string name="str_main_none">"None"</string>
    <!-- 主页面 End -->
    <!-- 呼叫dialog Start -->
    <string name="str_call_title">"Contacts List"</string>
    <string name="str_call_110">"Call 110"</string>
    <string name="str_call_contacts">"Contacts："</string>
    <!-- 呼叫dialog  End -->
    
	<!-- 历史查看dialog Start -->
    <string name="str_histories_title">"Histories"</string>
    <string name="str_histories_warning_index">"Index"</string>
    <string name="str_histories_warning_time">"Time"</string>
    <string name="str_histories_warning_id">"WarningID"</string>
    <string name="str_histories_warning_name">"DeviceName"</string>
    <string name="str_histories_warning_context">"WarningContext"</string>
    <!--  历史查看dialog  End -->
    
    <!-- 设置 dialog Start -->
    <string name="str_settings_title">"Settings"</string>
    <string name="str_settings_sound">"Sound"</string>
    <string name="str_settings_devices">"Devices Settings"</string>
    <string name="str_settings_add_device">"Add device"</string>
    <string name="str_settings_del_device">"Delete device"</string>
    <string name="str_settings_system_info">"System Info"</string>
    <string name="str_settings_someone_go_home_tone">"Someone go Home tone"</string>
    <string name="str_settings_someone_away_home_tone">"Someone away Home tone"</string>
    <string name="str_settings_phone_warning_tone">"Phone Warning tone"</string>
    <string name="str_settings_phone_warning_time">"Warning time"</string>
    <string name="str_settings_myself_go_home_tone">"Myself go Home tone"</string>
    <string name="str_settings_myself_away_home_tone">"Myself away Home tone"</string>
    <!-- 设置 dialog End -->
    <!-- 铃声选择 dialog Start -->
    <string name="str_settings_tone_title">"Tone Select"</string>
    <!-- 铃声选择 dialog End -->
</resources>