<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/home_bk"
    android:orientation="vertical" >

    <Button
        android:id="@+id/bt_main_exit"
        style="@android:style/TextAppearance.WindowTitle"
        android:layout_width="@dimen/d_main_exit_button_width"
        android:layout_height="@dimen/d_main_exit_button_height"
        android:layout_gravity="top|right"
        android:layout_marginRight="@dimen/d_welcome_setup_margin_right"
        android:layout_marginTop="@dimen/d_welcome_setup_context_setup_next_margin"
        android:background="@drawable/exit_button_background"
        android:text="@string/str_main_exit"
        android:textColor="@android:color/white"
        android:textSize="@dimen/d_welcome_setup_context" />

    <ImageButton
        android:id="@+id/ibt_main_warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/d_welcome_setup_title_setup_context_margin"
        android:background="@drawable/login" />

    <TextView
        android:id="@+id/tx_main_warning_id"
        style="@android:style/TextAppearance.WindowTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/str_main_warning_id"
        android:textColor="@android:color/white"
        android:textSize="@dimen/d_welcome_setup_context" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/d_welcome_setup_title_setup_context_margin"
            android:background="@drawable/horizontal_line" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/d_welcome_setup_title_setup_context_margin"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/bt_main_safety_staus"
                style="@android:style/TextAppearance.WindowTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/image_button_background"
                android:text="@string/str_main_safety_status"
                android:textColor="@android:color/white"
                android:textSize="@dimen/d_welcome_setup_context" />

            <Button
                android:id="@+id/bt_main_call"
                style="@android:style/TextAppearance.WindowTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/d_main_button_margin"
                android:background="@drawable/image_button_background"
                android:text="@string/str_main_call"
                android:textColor="@android:color/white"
                android:textSize="@dimen/d_welcome_setup_context" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/d_main_button_margin"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/bt_main_settings"
                style="@android:style/TextAppearance.WindowTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/image_button_background"
                android:text="@string/str_main_setting"
                android:textColor="@android:color/white"
                android:textSize="@dimen/d_welcome_setup_context" />

            <Button
                android:id="@+id/bt_main_history"
                style="@android:style/TextAppearance.WindowTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/d_main_button_margin"
                android:background="@drawable/image_button_background"
                android:text="@string/str_main_history"
                android:textColor="@android:color/white"
                android:textSize="@dimen/d_welcome_setup_context" />
        </LinearLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/d_welcome_setup_title_setup_context_margin"
            android:background="@drawable/horizontal_line" />

        <TextView
            android:id="@+id/tx_main_username"
            style="@android:style/TextAppearance.WindowTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/str_user_setup_name"
            android:textColor="@android:color/white"
            android:textSize="@dimen/d_welcome_setup_context" />
    </LinearLayout>

</LinearLayout>