<?xml version="1.0" encoding="utf-8"?>
<!-- 设置管理员页面 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/l_user_setup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:visibility="gone" >

    <TextView
        style="@android:style/TextAppearance.WindowTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/d_welcome_setup_margin_left"
        android:text="@string/str_user_setup_title"
        android:textSize="@dimen/d_welcome_setup_title" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/d_welcome_setup_title_setup_context_margin"
        android:background="@drawable/horizontal_line" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/d_welcome_setup_margin_left"
        android:text="@string/str_user_setup_remind_info"
        android:textColor="@android:color/white"
        android:textSize="@dimen/d_welcome_setup_context" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/d_setup_margin_top"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/d_setup_edit_high"
                android:text="@string/str_user_setup_name"
                android:textColor="@android:color/white"
                android:textSize="@dimen/d_welcome_setup_context"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/d_setup_edit_high"
                android:text="@string/str_user_setup_passwd"
                android:textColor="@android:color/white"
                android:textSize="@dimen/d_welcome_setup_context"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/d_setup_edit_high"
                android:text="@string/str_user_setup_passwd_verify"
                android:textColor="@android:color/white"
                android:textSize="@dimen/d_welcome_setup_context"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/d_setup_margin_top"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/e_setup_user_username"
                android:layout_width="@dimen/d_setup_edit_width"
                android:layout_height="@dimen/d_setup_edit_high"
                android:inputType="textCapCharacters"
                android:singleLine="true" />

            <EditText
                android:id="@+id/e_setup_user_passwd"
                android:layout_width="@dimen/d_setup_edit_width"
                android:layout_height="@dimen/d_setup_edit_high"
                android:inputType="textPassword"
                android:singleLine="true" />

            <EditText
                android:id="@+id/e_setup_user_passwd_verify"
                android:layout_width="@dimen/d_setup_edit_width"
                android:layout_height="@dimen/d_setup_edit_high"
                android:inputType="textPassword"
                android:singleLine="true" />

            <Spinner
                android:id="@+id/sp_setup_spinner"
                android:layout_width="@dimen/d_setup_edit_width"
                android:layout_height="@dimen/d_setup_edit_high"
                android:entries="@array/user_type" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/d_welcome_setup_title_setup_context_margin"
        android:background="@drawable/horizontal_line" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/d_setup_margin_top"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/b_user_previous"
            android:layout_width="@dimen/d_setup_next_width"
            android:layout_height="@dimen/d_setup_next_high"
            android:layout_gravity="left"
            android:layout_marginRight="@dimen/d_welcome_setup_margin_left"
            android:background="@drawable/button_background"
            android:gravity="center"
            android:onClick="PreviousButtonOnClick"
            android:text="@string/str_previous"
            android:textSize="@dimen/d_welcome_setup_context" />

        <Button
            android:id="@+id/b_user_next"
            android:layout_width="@dimen/d_setup_next_width"
            android:layout_height="@dimen/d_setup_next_high"
            android:layout_gravity="right"
            android:layout_marginLeft="@dimen/d_setup_button_margin_left"
            android:layout_marginRight="@dimen/d_welcome_setup_margin_right"
            android:background="@drawable/button_background"
            android:gravity="center"
            android:onClick="NextButtonOnClick"
            android:text="@string/str_next"
            android:textSize="@dimen/d_welcome_setup_context" />
    </LinearLayout>

</LinearLayout>